trying to add slider functionfor error respons still very buggy unreliable jumps and also miss fires form submission requiring two clicks sometimes also doesnt transition between two errors properly

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -5,6 +5,11 @@
   padding-top: 0em;
   padding-bottom: 0em;
   margin-bottom: 1.0em;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 100;
+
 
 }
 
